--- a/force-app/main/default/lwc/audience/audience.css
+++ b/force-app/main/default/lwc/audience/audience.css
@@ -1,6 +1,7 @@
 :host {
     display: block;
     background-color: #1e1e2f;
+    padding-top: 2rem;
     padding-bottom: 1rem;
     border-radius: 55px;
     width: 430px;
@@ -11,8 +12,20 @@
     font-family: var(--lwc-fontFamily,-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol');
 }
 
-.slds-col {
-    /*border: red solid 1px;*/
+.screen-title {
+    text-align: center;
+    font-size: 16px;
+    font-weight: 600;
+    color: white;
+    padding-bottom: 1.25rem;
+}
+
+.metrics-col {
+    margin-top: 1rem;
+}
+
+.metric-label {
+    color: #AEB6BF;
 }
 
 .full-height {
@@ -21,31 +34,37 @@
 
 .title {
     color: white;
-    font-size: 14px;
+    font-size: 1rem;
     font-weight: 600;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 1.5rem;
     background-color: #2c2c3e;
 }
 
-.screen-head {
-    border-top-right-radius: 55px;
-    border-top-left-radius: 55px;
-    padding-top: 24px;
-}
-
 .audience {
-    height: 40%;
+    /* height: 40%; */
 }
 
 .bloggers-overlap {
-    height: 25%;
+    margin-top: 0.5rem;
 }
 
 .audience-geography {
-    height: 31%;
+    margin-top: 1.5rem;
 }
 
 .audienceDataValue {
     font-size: 35px;
     font-weight: 600;
+}
+
+.blogger-cards-wrapper {
+    margin-top: 1rem;
+    display: flex;
+    gap: 0.5rem;
+    margin-right: 1rem;
+    margin-left: 1rem;
+}
+
+c-blogger-overlap-card {
+    flex: 1;
 }
