--- a/force-app/main/default/lwc/audienceGeography/audienceGeography.css
+++ b/force-app/main/default/lwc/audienceGeography/audienceGeography.css
@@ -23,8 +23,8 @@
 
 .title {
     color: white;
-    font-size: 14px;
+    font-size: 1rem;
     font-weight: 600;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 1.5rem;
     background-color: #2c2c3e;
 }
