--- a/force-app/main/default/lwc/bloggerOverlapCard/bloggerOverlapCard.css
+++ b/force-app/main/default/lwc/bloggerOverlapCard/bloggerOverlapCard.css
@@ -3,15 +3,14 @@
 }
 .photo img {
     border-radius: 100%;
-    height: 100px;
-    width: 100px;
+    height: 80px;
+    width: 80px;
     display: block;
     margin: 1px auto;
     margin-top: 10px;
 }
 
 .card {
-    box-shadow: 0px 0px 5px 1px #0d0d16;
     border-radius: 10%;
     background-color: #2c2c3e;
     margin: 0px 5px;
@@ -19,4 +18,8 @@
 
 .value {
     margin-bottom: 6px;
+}
+
+.name {
+    margin-top: 0.25rem;
 }
