--- a/force-app/main/default/lwc/travelActivityTrends/travelActivityTrends.css
+++ b/force-app/main/default/lwc/travelActivityTrends/travelActivityTrends.css
@@ -7,7 +7,6 @@
     padding: 20px;
     background-color: #1e1e2f;
     border-radius: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .chart-container canvas {
@@ -24,8 +23,8 @@
 
 .title {
     color: white;
-    font-size: 14px;
+    font-size: 1rem;
     font-weight: 600;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 1.5rem;
     background-color: #2c2c3e;
 }
