--- a/force-app/main/default/lwc/tourGPT/tourGPT.css
+++ b/force-app/main/default/lwc/tourGPT/tourGPT.css
@@ -12,7 +12,7 @@
 }
 
 .slds-col {
-    border: red solid 1px;
+    /* border: red solid 1px; */
 }
 
 .full-height {
@@ -43,17 +43,57 @@
 
 .recommendations {
     height: 31%;
-}
-
-.audienceDataValue {
-    font-size: 35px;
-    font-weight: 600;
+    margin-top: 45px;
 }
 
 .probability-circle {
     border-radius: 50%;
     height: 200px;
+    position: relative;
     width: 200px;
     margin: 15px auto;
-    border: 2px solid green;
+    border: 1px solid white;
+    background-color: rgb(82, 190, 128);
+}
+
+.circle-number {
+    position: absolute;
+    top: 33%;
+    font-size: 40px;
+    font-weight: 600;
+    left: 32%
+}
+
+.property-value {
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.recommendation-item-text {
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.recommendation-item {
+    position: relative
+}
+
+.recommendation-item::before {
+    content: '';
+    position: absolute;
+    top: 15px;
+    left: -10px;
+    width: 10px;
+    height: 10px;
+    background-color: white;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.recommendations-list {
+    padding-left: 12px;
+}
+
+.neon-box {
+    box-shadow: 0 0 12px 1px #d7f3d7;
 }
