--- a/force-app/main/default/lwc/audience/audience.css
+++ b/force-app/main/default/lwc/audience/audience.css
@@ -14,7 +14,7 @@
 
 .screen-title {
     text-align: center;
-    font-size: 16px;
+    font-size: 1.2rem;
     font-weight: 600;
     color: white;
     padding-bottom: 1.25rem;
@@ -45,11 +45,11 @@
 }
 
 .bloggers-overlap {
-    margin-top: 0.5rem;
+    margin-top: 1rem;
 }
 
 .audience-geography {
-    margin-top: 1.5rem;
+    margin-top: 2rem;
 }
 
 .audienceDataValue {
