--- a/force-app/main/default/lwc/tourGPT/tourGPT.css
+++ b/force-app/main/default/lwc/tourGPT/tourGPT.css
@@ -1,6 +1,7 @@
 :host {
     display: block;
     background-color: #1e1e2f;
+    padding-top: 2rem;
     padding-bottom: 1rem;
     border-radius: 55px;
     width: 430px;
@@ -8,7 +9,53 @@
     color: white;
     font-size: 14px;
     font-weight: 600;
-    font-family: var(--lwc-fontFamily, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol');
+    font-family: var(--lwc-fontFamily,-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol');
+}
+
+.screen-title {
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: white;
+    padding-bottom: 1.25rem;
+}
+
+.label {
+    color: #AEB6BF;
+}
+
+.screen-wrap {
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+
+.activities-wrap {
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+    margin-top: 0.55rem;
+}
+
+.activity-tag {
+    padding: 0.125rem 0.75rem;
+    border-radius: 10px;
+    font-size: 15px;
+}
+
+.activity-tag.food {
+    background-color: #2E86C1;
+}
+
+.activity-tag.hiking {
+    background-color: #17A589;
+}
+
+.activity-tag.bars {
+    background-color: #FA5F55;
+}
+
+.activity-tag.sunsets {
+    background-color: #F39C12;
 }
 
 .slds-col {
@@ -21,29 +68,22 @@
 
 .title {
     color: white;
-    font-size: 14px;
+    font-size: 1rem;
     font-weight: 600;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 1.5rem;
     background-color: #2c2c3e;
 }
 
-.screen-head {
-    border-top-right-radius: 55px;
-    border-top-left-radius: 55px;
-    padding-top: 24px;
-}
-
 .tour-props {
-    height: 40%;
+    /* height: 40%; */
 }
 
 .probablity {
-    height: 25%;
+    margin-top: 3rem;
 }
 
-.recommendations {
-    height: 31%;
-    margin-top: 45px;
+.recommendations-wrap {
+    margin-top: 3rem;
 }
 
 .probability-circle {
@@ -64,36 +104,45 @@
     left: 32%
 }
 
+.circle-title {
+    font-size: 15px;
+    margin-top: 0.25rem;
+}
+
 .property-value {
-    font-size: 22px;
+    font-size: 1.2rem;
     font-weight: 600;
-}
-
-.recommendation-item-text {
-    font-size: 22px;
-    font-weight: 600;
-}
-
-.recommendation-item {
-    position: relative
-}
-
-.recommendation-item::before {
-    content: '';
-    position: absolute;
-    top: 15px;
-    left: -10px;
-    width: 10px;
-    height: 10px;
-    background-color: white;
-    border-radius: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.recommendations-list {
-    padding-left: 12px;
 }
 
 .neon-box {
     box-shadow: 0 0 12px 1px #d7f3d7;
+}
+
+.recommendations-list {
+    margin-top: 0.5rem;
+}
+
+.recommendation-item {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    font-size: 1rem;
+}
+
+.label.recommendations {
+    font-size: 1rem;
+}
+
+.recommendation-item lightning-icon {
+    --sds-c-icon-color-foreground-default: greenyellow;
+}
+
+.edit-icon {
+    --sds-c-icon-color-foreground-default: white;
+}
+
+.trip-input-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
