--- a/force-app/main/default/lwc/trends/trends.css
+++ b/force-app/main/default/lwc/trends/trends.css
@@ -14,7 +14,7 @@
 
 .screen-title {
     text-align: center;
-    font-size: 16px;
+    font-size: 1.2rem;
     font-weight: 600;
     color: white;
     padding-bottom: 1.25rem;
