--- a/force-app/main/default/lwc/bloggerOverlapCard/bloggerOverlapCard.css
+++ b/force-app/main/default/lwc/bloggerOverlapCard/bloggerOverlapCard.css
@@ -14,12 +14,14 @@
     border-radius: 10%;
     background-color: #2c2c3e;
     margin: 0px 5px;
+    border: 2px solid slategrey;
 }
 
 .value {
     margin-bottom: 6px;
+    font-size: 1rem;
 }
 
 .name {
-    margin-top: 0.25rem;
+    margin-top: 0.5rem;
 }
