--- a/force-app/main/default/lwc/trip/trip.css
+++ b/force-app/main/default/lwc/trip/trip.css
@@ -68,3 +68,10 @@ img {
 .destinations-section lightning-icon {
     --sds-c-icon-color-foreground-default: #F1C40F;
 }
+
+.navigation-panel {
+    font-size: 1rem;
+    display: flex;
+    gap: 1rem;
+    margin-top: 1rem;
+}
