--- a/force-app/main/default/lwc/bloggerOverlapCard/bloggerOverlapCard.css
+++ b/force-app/main/default/lwc/bloggerOverlapCard/bloggerOverlapCard.css
@@ -14,7 +14,7 @@
     border-radius: 10%;
     background-color: #2c2c3e;
     margin: 0px 5px;
-    border: 2px solid slategrey;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2), 0 24px 32px rgba(0, 0, 0, 0.2), 0 32px 48px rgba(0, 0, 0, 0.2);
 }
 
 .value {
