--- a/force-app/main/default/lwc/tourGPT/tourGPT.css
+++ b/force-app/main/default/lwc/tourGPT/tourGPT.css
@@ -24,20 +24,16 @@
     color: #AEB6BF;
 }
 
-.screen-wrap {
-    padding-left: 2rem;
-    padding-right: 2rem;
-}
-
 .activities-wrap {
     display: flex;
     gap: 1rem;
     flex-wrap: wrap;
-    margin-top: 0.55rem;
+    margin-top: 1.5rem;
+    justify-content: center;
 }
 
 .activity-tag {
-    padding: 0.125rem 0.75rem;
+    padding: 0.125rem 0.8rem;
     border-radius: 10px;
     font-size: 15px;
 }
@@ -75,15 +71,24 @@
 }
 
 .tour-props {
-    /* height: 40%; */
+    display: flex;
+    align-items: center;
+    width: 100%;
+    gap: 1.5rem;
+    text-align: center;
+    justify-content: center;
+    margin-top: 1.2rem;
 }
 
 .probablity {
-    margin-top: 3rem;
+    margin-top: 1.75rem;
+    padding-top: 1.75rem;
+    border-top: 1px dashed white;
 }
 
 .recommendations-wrap {
     margin-top: 3rem;
+    padding-left: 2rem;
 }
 
 .probability-circle {
@@ -92,8 +97,7 @@
     position: relative;
     width: 200px;
     margin: 15px auto;
-    border: 1px solid white;
-    background-color: rgb(82, 190, 128);
+    background-color: mediumseagreen;
 }
 
 .circle-number {
@@ -105,8 +109,9 @@
 }
 
 .circle-title {
-    font-size: 15px;
+    font-size: 16px;
     margin-top: 0.25rem;
+    font-weight: 400;
 }
 
 .property-value {
@@ -115,7 +120,7 @@
 }
 
 .neon-box {
-    box-shadow: 0 0 12px 1px #d7f3d7;
+    /* box-shadow: 0 0 12px 1px #d7f3d7; */
 }
 
 .recommendations-list {
@@ -127,6 +132,7 @@
     gap: 1rem;
     align-items: center;
     font-size: 1rem;
+    font-weight: 400;
 }
 
 .label.recommendations {
@@ -143,6 +149,24 @@
 
 .trip-input-item {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2), 0 24px 32px rgba(0, 0, 0, 0.2), 0 32px 48px rgba(0, 0, 0, 0.2);
+    background-color: #2c2c3e;
+    padding: 0.5rem 0.75rem;
+    border-radius: 20px;
+    width: 110px;
+}
+
+.activities-label {
+    color: white;
+    font-size: 1rem;
+    font-weight: 600;
+    padding: 0.5rem 1.5rem;
+    background-color: #2c2c3e;
+}
+
+.activities-tab {
+    width: 100%;
+    margin-top: 2rem;
 }
