--- a/force-app/main/default/lwc/travelersPeople/travelersPeople.css
+++ b/force-app/main/default/lwc/travelersPeople/travelersPeople.css
@@ -27,8 +27,13 @@
     font-size: 24px;
 }
 
+.dots {
+    text-align: center;
+    margin: 1rem 0;
+}
+
 .dot {
-    font-size: 20px;
+    font-size: 22px;
 }
 
 .dot.green {
@@ -48,13 +53,15 @@
 .trip-info {
     border: 1px solid lightgray;
     border-radius: 10px;
-    margin-right: 1rem;
-    margin-left: 1rem;
+    margin-right: 2rem;
+    margin-left: 2rem;
     margin-top: 1rem;
+    font-size: 15px;
+    display: flex;
 }
 
 .destination {
-    border-bottom: 1px solid lightgray;
+    /* border-bottom: 1px solid lightgray; */
 }
 
 .destination, .dates {
@@ -62,7 +69,7 @@
     align-items: center;
     gap: 0.8rem;
     flex: 1;
-    padding: 0.75rem 1rem;
+    padding: 0.5rem 1rem;
 }
 
 .dates p {
@@ -108,7 +115,6 @@
     display: flex;
     gap: 1.5rem 2rem;
     flex-wrap: wrap;
-    margin-top: 2rem;
     justify-content: center;
 }
 
@@ -135,24 +141,26 @@
 }
 
 .activities-filter {
-    padding-left: 2rem;
-    padding-right: 2rem;
-    padding-bottom: 2rem;
-    border-bottom: 1px dashed gray;
+    /* margin-top: 0.75rem; */
 }
 
 .activities-wrap {
     display: flex;
     gap: 0.75rem;
     flex-wrap: wrap;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     /* justify-content: center; */
 }
 
 .activity-tag {
+    /*border: 1px solid lightgray;
+    padding: 0.25rem 0.5rem;
+    border-radius: 10px;
+    font-size: 12px;
+    background-color: #F2F4F4;*/
     padding: 0.125rem 0.8rem;
     border-radius: 10px;
-    font-size: 15px;
+    font-size: 12px;
     color: white;
     font-weight: 600;
 }
@@ -179,15 +187,22 @@
     gap: 1rem;
 }
 
+.filters-container {
+    padding: 1rem 2rem;
+    margin-top: 1rem;
+    background: rgb(133, 146, 158, 0.1);
+}
+
 .filters {
     display: flex;
-    gap: 1rem;
-    justify-content: center;
-    text-align: center;
+    gap: 1.5rem;
 }
 
 .label {
     margin-bottom: 0.25rem;
+    margin-left: 0.25rem;
+    font-size: 14px;
+    font-weight: 600;
 }
 
 .subtitle {
@@ -219,4 +234,17 @@
 .find-btn lightning-icon {
     --sds-c-icon-color-foreground-default: white;
     margin-right: 0.75rem;
+}
+
+.age-options, .gender-options {
+    display: flex;
+    gap: 0.5rem;
+}
+
+.age-option, .gender-option {
+    border: 1px solid lightgray;
+    padding: 0.25rem 0.5rem;
+    border-radius: 10px;
+    font-size: 12px;
+    background-color: #F2F4F4;
 }
