Adjusted Travelers Entry Screen

--- a/force-app/main/default/lwc/travelersEntryScreen/travelersEntryScreen.css
+++ b/force-app/main/default/lwc/travelersEntryScreen/travelersEntryScreen.css
@@ -55,11 +55,30 @@
 }
 
 .destination-input, .date-input {
+    border: 1px solid lightgray;
+    padding: 0.5rem 0.75rem;
+    border-radius: 10px;
+    font-size: 15px;
     width: 100%;
-    padding: 0.5rem;
+    padding: 0.5rem 1rem;
     border: 1px solid #ccc;
     border-radius: 10px;
-    font-size: 16px;
+    font-size: 15px;
+    display: flex;
+}
+
+.destination-input {
+    gap: 0.75rem;
+}
+
+.destination-input lightning-icon,
+.date-input lightning-icon {
+    padding-top: 1px;
+    --sds-c-icon-color-foreground-default: #566573;
+}
+
+.date-input {
+    justify-content: space-between;
 }
 
 .date-inputs {
@@ -75,7 +94,6 @@
 .label {
     margin-bottom: 0.25rem;
     margin-left: 0.25rem;
-    color: gray;
 }
 
 .footer-section {
